transporte-k8s/transporte-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transporte
  namespace: transporte
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transporte
      version: 'v1'
  template:
    metadata:
      labels:
        app: transporte
        version: 'v1'
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - transporte
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - name: transporte-app
          image: genesisoft/transporte
          resources:
            requests:
              memory: '512Mi'
              cpu: '500m'
            limits:
              memory: '1Gi'
              cpu: '1'
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /management/health/readiness
              port: http
            initialDelaySeconds: 20
            periodSeconds: 15
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /management/health/liveness
              port: http
            initialDelaySeconds: 120
